--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install Libs
+      run: |
+        sudo apt install libsnmp-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
